# py-sample-package

./: .dockerignore  .env.sample  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-to-pypi.yml
tests/: test_sample_packageee.py
